<resources>
    <string name="app_name">Assignment5</string>
    <string name="start_naver_login_tv">네이버 로그인</string>
    <string name="start_kakao_login_tv">카카오 로그인</string>
    <string name="start_google_login_tv">구글 로그인</string>
    <string name="game_ttada_tv">경기로 따다</string>
    <string name="game_cart_tv">카트</string>
    <string name="game_list_tv">경기 목록</string>
    <string name="game_betting_tv">베팅 내역</string>
    <string name="game_result_tv">경기 결과</string>
    <string name="gameAll_tv">전 종목</string>
    <string name="winLossTv">승무패</string>
    <string name="handTv">H-1.5</string>
    <string name="scoreSumTv">점수합</string>
    <string name="homeWin">홈 승</string>
    <string name="awayWin">원정 승</string>
    <string name="draw">무승부</string>
    <string name="up">이상</string>
    <string name="down">이하</string>
    <string name="playMessageTv">큰 거 한방 터져라!</string>
    <string name="playPredictTv">전세계 경기 결과를 예측하라!</string>
    <string name="game_noting_tv">베팅 가능한 경기가 없습니다.</string>
    <string name="playAdTv">내 손 안의 스포츠 세상</string>
    <string name="playAdOpenTv">모바일 승부 예측 따다 오픈!</string>
    <string name="ownMoneyTv">보유 재화</string>
    <string name="dayLossGold">일일 손실 골드</string>
    <string name="lossCutTv">현재 손실 한도</string>
    <string name="lossCutNumberTv">-50,000,000</string>
    <string name="lostCutChangeTv">변경</string>
    <string name="pushAlarmTv">푸시 알림</string>
    <string name="soundTv">사운드</string>
    <string name="soundOnTv">ON</string>
    <string name="soundOffTv">OFF</string>
    <string name="versionInfoTv">버전 정보</string>
    <string name="versionNumTv">1.0.3</string>
    <string name="couponTv">쿠폰</string>
    <string name="couponInputTv">입력</string>
    <string name="useLimitSetTv">이용 제한 기간 설정</string>
    <string name="useLimitCurrentTv">현재 미설정</string>
    <string name="limitSetTv">설정</string>
    <string name="customerCenterTv">고객 센터</string>
    <string name="termTv">이용 약관</string>
    <string name="infoTv">심의 정보</string>
    <string name="zero">0</string>
    <string name="settingLogoutTv">카카오 로그아웃</string>
</resources>